# relais

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_FR.md  alembic.ini  launcher.py  opentui-core-0.2.1.tgz  pyproject.toml  relais  supervisor.sh  supervisord.conf
.agents/rules/: coding-style.md  common-coding-style.md  development-workflow.md  patterns.md
.agents/workflows/: architect.md  blueprint.md  code-review.md
.claude/handoffs/: phase1.md  phase2-1-3.md  phase2-2.md  phase2-4.md  phase2-5-6.md
.claude/hooks/: post-commit.sh
.claude/plan/: commandant_phase1_tests.md  commandant_phase2_brick.md  commandant_phase3_portail.md  (+5 more)
aiguilleur/: __init__.py  base.py  channel_config.py  main.py  streaming_mixin.py
archiviste/: cleanup_retention.py  main.py
atelier/: SYSTEM_PROMPT.md  agent_executor.py  diagnostic_trace.py  display_config.py  error_synthesizer.py  errors.py  executor.py  internal_tool.py  main.py  mcp_adapter.py  mcp_loader.py  mcp_session_manager.py  message_serializer.py  profile_loader.py  profile_model.py  progress_config.py  prompts.py  sdk_executor.py  skill_annotator.py  skills_tools.py  soul_assembler.py  souvenir_backend.py  stream_loop.py  stream_publisher.py  streaming.py  subagent_capture.py  subagents.py  subagents_resolver.py  tool_policy.py  tools.py  transient_errors.py
commandant/: __init__.py  bundle_commands.py  commands.py  main.py
common/: brick_base.py  brick_logger.py  bundle_errors.py  bundles.py  command_utils.py  config_loader.py  config_reload.py  contexts.py  envelope.py  envelope_actions.py  event_publisher.py  health.py  init.py  markdown_converter.py  pattern_matcher.py  profile_loader.py  redis_client.py  role_registry.py  shutdown.py  stream_client.py  streams.py  text_utils.py  user_record.py  user_registry.py
config/: HEARTBEAT.md.default  aiguilleur.yaml.default  atelier.yaml.default  channels.yaml.default  config.yaml.default  forgeron.yaml.default  horloger.yaml.default  mcp_servers.yaml.default  portail.yaml.default  profiles.yaml.default  redis.conf  reply_policy.yaml.default  sentinelle.yaml.default  users.yaml.default
docs/: ANALYSE_PROJET_2026-04-21.md  ARCHITECTURE.md  ATELIER.md  BUNDLES.md  COMMANDANT.md  CONTRIBUTING.md  ENV.md  FORGERON.md  HORLOGER.md  REDIS_BUS_API.md  SOUVENIR.md  WHATSAPP_SETUP.md
forgeron/: __init__.py  analyzer.py  base_store.py  changelog_writer.py  config.py  intent_labeler.py  llm_factory.py  main.py  models.py  patch_store.py  patcher.py  session_store.py  skill_consolidator.py  skill_creator.py  skill_editor.py  trace_store.py  validator.py
horloger/: envelope_builder.py  execution_store.py  job_model.py  job_registry.py  main.py  models.py  scheduler.py
plans/: CONFIG_ADMIN_SUBAGENT_REGISTRY.md  FORGERON_SKILL_CREATION.md  HOT_RELOAD_CONFIG.md  RELAIS_ARCHITECTURE_COMPLETE_v12.md  SKILL_SELF_IMPROVEMENT.md  SUBAGENTS_YAML_MIGRATION.md  TUI.md  WHATSAPP_ADAPTER.md  comptoir.md
portail/: main.py  prompt_loader.py  reply_policy.py  user_registry.py
prompts/: out_of_hours.md  telegram_default.md
scripts/: install_whatsapp.sh  pair_whatsapp.py  run_baileys.py  unpair_whatsapp.py
sentinelle/: acl.py  guardrails.py  main.py
soul/: SOUL.md.default
souvenir/: context_store.py  file_store.py  long_term_store.py  main.py  memory_extractor.py  models.py
tests/: conftest.py  test_acl_command_wildcard.py  test_agent_executor.py  test_agent_executor_diagnostic.py  test_agent_executor_display_config.py  test_agent_executor_progress.py  test_aiguilleur_discord.py  test_aiguilleur_hot_reload.py  test_aiguilleur_manager.py  test_archiviste.py  test_atelier.py  test_atelier_compact.py  test_atelier_file_watcher.py  test_atelier_force_subagent.py  test_atelier_hot_reload.py  test_atelier_skill_trace.py  test_atelier_skill_tracking.py  test_atelier_user_record.py  test_brick_base.py  test_bundle_commands.py  test_bundle_registry.py  test_bundle_skill_path.py  test_bundles.py  test_channel_config.py  test_chunk_payload.py  test_cli_bundle.py  test_command_utils.py  test_commandant.py  test_commandant_compact.py  test_commandant_new_stream.py  test_common.py  test_config_admin_subagent.py  test_config_loader_profile.py  test_config_reload.py  test_config_reload_watch.py  test_diagnostic_trace.py  test_discord_adapter.py  test_discord_guard_empty_content.py  test_display_config.py  test_dlq_trace_and_diagnostic.py  (+115 more)
tools/tui/: pyproject.toml
tools/tui/src/relais_tui/: __init__.py  __main__.py  app.py  attachments.py  bundles.py  chat_state.py  client.py  config.py  md_stream.py  paste_handler.py  push_client.py  sse_parser.py
tools/tui/src/relais_tui/cli/: bundle.py
tools/tui/src/relais_tui/screens/: bundles_screen.py
tools/tui/tests/: test_app.py  test_bundles.py  test_chat_state.py  test_client.py  test_config.py  test_md_stream.py  test_paste_handler.py  test_phase6.py  test_repl_loop.py  test_sse_parser.py
(+97 files in other folders)
