[project]
name = "relais"
version = "0.1.0"
description = "RELAIS Micro-brick Architecture"
authors = [
    {name = "Benjamin Marchand"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "supervisor>=4.2.5",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "deepagents",
    "mcp>=1.0.0",
    "sqlmodel>=0.0.37",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "discord-py>=2.0",
    "certifi>=2024.0",
    "langchain-openai>=1.1.12",
    "langchain-openrouter>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-mistralai>=1.1.2",
    "langchain-deepseek>=1.0.1",
    "langgraph-checkpoint-sqlite>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "common",
    "aiguilleur",
    "portail",
    "sentinelle",
    "atelier",
    "souvenir",
    "archiviste",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that require external services (Redis, LiteLLM, etc.)",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "fakeredis[aioredis]>=2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
